# My_Game

./: .gitignore  main.py  pyproject.toml
src/fantasy_rpg/combat/: skills.py  spells.py
src/fantasy_rpg/core/: game.py
src/fantasy_rpg/entities/: enemy.py  entity.py  npc.py  player.py  stats.py
src/fantasy_rpg/items/: items.py
src/fantasy_rpg/quests/: quests.py
src/fantasy_rpg/world/: region.py  tile.py
